SunEditor fix dialog z-index again

--- a/core/src/main/resources/META-INF/resources/primefaces-extensions/suneditor/1-suneditor-widget.css
+++ b/core/src/main/resources/META-INF/resources/primefaces-extensions/suneditor/1-suneditor-widget.css
@@ -3,3 +3,8 @@ body .sun-editor,
 body .sun-editor-editable {
   font-family: var(--font-family);
 }
+
+/* Ensure the editor can receive input in dialog */
+body .sun-editor .se-wrapper .se-wrapper-inner {
+  z-index: 9999;
+}
